--- a/delivery3/src/css/Detail.module.css
+++ b/delivery3/src/css/Detail.module.css
@@ -1,6 +1,31 @@
 .container{
-    position: absolute;
-    top: 60px;
     width: 100%;
     height: 100%;
+    padding-top: 80px;
+    padding-bottom: 50px;
+    background: rgb(224, 217, 217);
+}
+.frame  h1{
+    display: block;
+    padding-top: 50px;
+    text-align: center;
+}
+.frame img{
+    float: left;
+    width: 300px;
+    height: 300px;
+}
+
+.frame{
+    
+    display: block;
+    margin: 0px auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 8px;
+    
+   
+    width: 800px;
+    height: 800px;
+    background: white;
+    
 }
