--- a/delivery1/src/css/Header.module.css
+++ b/delivery1/src/css/Header.module.css
@@ -8,13 +8,20 @@ header{
 }
 nav{
     position: absolute;
+    display: flex;
     right: 20px;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    
 }
 
 
 
-nav a{
+.menuButton{
     text-decoration: none;
     font-size: 20px;
     color: white;
+    cursor: pointer;
+    
 }
